--- a/assets/css/mainPage/index.css
+++ b/assets/css/mainPage/index.css
@@ -7,6 +7,7 @@ a {
 body {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 .container {
     max-width: 1660px;
@@ -26,108 +27,11 @@ body {
     position: relative;
 
 }
-.header {
-    /*position: fixed;*/
-    z-index: 100;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    overflow: visible;
-}
 
-.header__right {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: 138px;
-    margin-right:  27px;
-    width: 50%;
-    position: fixed;
-    right: 0;
-    top: 0;
-    /*position: absolute;*/
-    /*right: 0;*/
-}
-.homeMenu {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    top: auto;
-}
 
-.navLinks {
-    margin-right: 5px;
-    display: flex;
 
-}
-.navLinks a {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 17px;
-    display: flex;
-    align-items: center;
-    text-align: center;
 
-    color: #002E42;
-    margin-right: 54px;
-}
 
-.sandwich {
-    max-width: 33px;
-}
-.sandwich img {
-    width: 100%;
-    cursor: pointer;
-}
-.header__left {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-left: 32px;
-    height: 138px;
-
-    width: 50%;
-    position: fixed;
-    /*top: 0;*/
-}
-
-.logo {
-    max-width: 64px;
-}
-.logo img {
-    width: 100%;
-    height: auto;
-}
-.search {
-    width: 290px;
-    height: 22px;
-    margin-left: 125px;
-    border-bottom: 1px solid #000000;
-    display: flex;
-    align-items: center;
-}
-.search__icon {
-    max-width: 13px;
-    margin-right: 9px;
-}
-.search__icon img {
-    width: 100%;
-}
-.search input {
-    width: 268px;
-    border: none;
-    background: none;
-    outline: none;
-}
-.search input::placeholder {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-
-    color: #000000;
-}
 .homePageSlide {
     background: linear-gradient(180deg, #9CD8F3 0%, #FFE9E7 100%);
     width: 100%;
