--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -73,9 +73,18 @@
 }
 .homeMenu {
     position: fixed;
-    right: 0;
-    bottom: 0;
-    top: auto;
+    /*right: 0;*/
+    /*bottom: 0;*/
+    /*top: auto;*/
+    /*opacity: 1;*/
+    /*transform: translate(0, 90vh);*/
+    transition: all 0.8s ease 0s;
+}
+.homeMenu._active {
+    /*right: 0;*/
+    /*bottom: 0;*/
+    /*top: auto;*/
+    transform: translate(0, 90vh);
 }
 
 .navLinks {
