--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -2,16 +2,25 @@
     font-family: 'Montserrat', sans-serif;
   }
   
-  
+  body {
+    margin: 0;
+    padding: 0;
+}
 
-  
+.background__Ping .actualBlock__sliders__slide{
+  background: #FDD5DF;
+}
 section{
-    max-width: 1600px;
-    margin: auto;
-  }
-
-  
-
+  max-width: 1600px;
+  margin: auto;
+}
+.buttonRequest_S:hover{
+  transition: 0.2s;
+}
+.buttonRequest_S:hover{
+  opacity: 0.6;
+  cursor: pointer;
+}
   .tittleTextS{
     font-family: Montserrat;
     font-style: normal;
@@ -22,7 +31,7 @@ section{
     align-items: center;
     color: #002E42;
     text-decoration: none;
-    margin-top: 139px;
+    padding-top: 139px;
     margin-bottom: 45px;
   }
   .descriptionTextS{
@@ -31,7 +40,7 @@ section{
   font-weight: normal;
   font-size: 20px;
   line-height: 24px;
-  color: #002E42;
+  color: #000;
   margin: 0;
   padding: 0;
   }
@@ -53,7 +62,7 @@ section{
 
 
   .flexBoxS .s_1:last-child{
-    margin-left: 592px;
+    margin-left: 392px;
 }
 
   
@@ -200,15 +209,6 @@ text-align: center;
 color: #002E42;
 }
 
-.itemBaseS:after {
-  content: url(../images/curs.svg);
-    position: absolute;
-    bottom: 28px;
-    left: 27px;
-}
-
-
-
 
 
 
@@ -227,16 +227,8 @@ color: #002E42;
   -moz-appearance: textfield;
 }
 .itemInpustS textarea {outline:none;}
-
-/* base */
-.flexBaseS{
-  display: flex;
-  overflow-x: scroll;
-  padding-bottom: 27px;
-  position: relative;
-}
-
-.flexBaseS .itemBaseS{
+.actualBlock__sliders__slide p  {
+  margin: 0 40px;
   font-family: Montserrat;
   font-style: normal;
   font-weight: 500;
@@ -245,27 +237,65 @@ color: #002E42;
   display: flex;
   align-items: center;
   color: #000000;
-  background: #FDD5DF;
+}
+.actualBlock__sliders__slide {
+  /*height: 21vh;*/
+  height: 194px;
+  width: 24vw;
+  max-width: 384px;
+  min-width: 346px;
+  margin-right: 13px;
+  background: #B4E8FF;
   border-radius: 5px;
-  width: 289px;
-  max-width: 289px;
-  min-width: 289px;
-  overflow: hidden;
-  position: relative;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  padding-left: 36px;
-  height: 218px;
-  min-height: 218px;
-  max-height: 218px;
+  display: flex;
+  align-items: center;
+  padding-bottom: 100px;
 }
 
-.flexBaseS::-webkit-scrollbar {
-  height: 5px;
-  width: 50px;
-  max-width: 50px;
+.actualBlock__sliders__slide p:after {
+  content: url('../images/mainPage/curs.svg');
+  position: absolute;
+  bottom: 74px;
+}
+
+
+
+
+/* скролл бар */
+.actualBlock__sliders {
+  display: flex;
+  overflow-x: scroll;
+  padding-bottom: 27px;
+  position: relative;
+  width: 100%;
+  border-radius: 10px;
+
+}
+.actualBlock__sliders::-webkit-scrollbar {
+  width: 12px;
+}
+.actualBlock__sliders::-webkit-scrollbar-button {
+  width: 2px;
+  height: 2px;
   cursor: pointer;
 }
+.actualBlock__sliders::-webkit-scrollbar-thumb {
+  /*height: 6px;*/
+  border: 3px solid transparent;
+  background: #002E42;
+  /*border-radius: 9px;*/
+  background-clip: content-box;
+  /*border: 1px solid #E4003A;*/
+}
+
+
+.actualBlock__sliders::-webkit-scrollbar-track {
+  background: rgba(0, 46, 66, 0.5);
+  border: 7px solid transparent;
+  background-clip: content-box;
+}
+
+/*  */
 .flexBaseS::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
@@ -295,17 +325,7 @@ color: #002E42;
 .flexBaseSSECtion{
   position: relative;
 }
-.flexBaseSSECtion:before {
-  content: '';
-  display: block;
-  position: absolute;
-  right: -2px;
-  height: 2px;
-  background: rgba(0, 46, 66, 0.5);
-  width: 100%;
-  margin-top: 49px;
-  bottom: 0px;
-}
+
 
 
 
@@ -360,10 +380,98 @@ margin-bottom: 9px;
   background: #ff000000;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* media */ 
+
+@media (max-width: 1600px){
+  section {
+    padding: 0px 30px 0px 30px !important;
+}
+.flexBoxS .s_1:last-child{
+  margin-left: auto !important
+}
+#footer {
+  padding: 0px 30px 0px 30px !important;
+}
+}
+
+
+@media (max-width: 1150px){
+.flexForm {
+  display: block !important;
+  height: auto !important;
+}
+.flexForm form {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  margin-top: 0 !important;
+  padding-bottom: 50px;
+}
+.flexForm .rightForm {
+  width: 100% !important;
+}
+.flexForm .leftForm {
+  width: 100% !important;
+  padding-top: 3px !important;
+  padding-bottom: 80px;
+}
+.flexForm .addImageS {
+  margin-bottom: 0 !important;
+}
+#footer{
+  columns: 250px 3 !important;
+  column-gap: 40px !important;
+  display: block  !important;
+}
+.itemFooter {
+  width: 150px;
+}
+.itemFooter {
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid;
+}
+}
+
+@media (max-width: 850px){
+  .flexBoxS {
+    display: block !important;
+}
+.s_1 {
+  width: 366px !important;
+}
+
+.flexBoxS .s_1:last-child{
+  padding-top: 30px;
+}
+
+
+}
 @media (max-width: 690px){
+  .formFlexInputs{
+    display: block !important;
+    width: 223px !important;
+    max-width: 200px !important;
+    min-width: 258px !important;
+
+  }
   .tittleTextS {
     font-size: 28px;
     line-height: 1;
+    padding-top: 50px;
     
 }
 
@@ -389,13 +497,23 @@ margin-bottom: 9px;
   width: 318px !important;
 }
 }
+
+
 @media (max-width: 400px){
   section {
     padding: 0px 15px 0px 15px !important;
+}
+  .roundS:after {
+    content: "Фото";
+    margin-top: 102px;
+    display: block;
+    line-height: 0;
+    margin-left: 77px;
+    color: rgba(0, 46, 66, 0.7);
 }
 .flexForm .roundS {
   width: 200px;
   height: 200px;
 }
-
 }
+
