--- a/assets/css/components/ComponentContact.css
+++ b/assets/css/components/ComponentContact.css
@@ -6,6 +6,7 @@
    .s_03{
     margin-top: 0 !important;
     margin-bottom: 0 !important;
+    padding-top: 0 !important;
   }
    .s_1{
   width: 50%
