--- a/assets/css/pages/history.css
+++ b/assets/css/pages/history.css
@@ -48,6 +48,7 @@ body #form h1{
 
 
 .wrapperHistory {
+    z-index: 0;
     background: #A5D9F2;
     box-shadow: 0px 2px 14px rgba(0, 0, 0, 0.13);
     border-radius: 5px;
