--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,9 @@
+.header a {
+    text-decoration: none;
+}
+*{
+    font-family: 'Montserrat', sans-serif;
+}
 .header {
     /*position: fixed;*/
     z-index: 100;
