--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,11 +1,14 @@
 #footer{
     max-width: 1600px;
     margin: auto;
-    /* background: #B4E8FF; */
-    padding-top: 134px;
+    padding-top: 65px;
     display: flex;
     justify-content: space-between;
     align-items: start;
+    padding-bottom: 100px;
+}
+.wrapperFooter{
+    background: #B4E8FF;
 }
 
 .itemFooter:nth-child(1){
