--- a/assets/css/pages/profi.css
+++ b/assets/css/pages/profi.css
@@ -47,9 +47,9 @@ body {
     justify-content: space-between;
     height: 149px;
     margin-top: 33px;
-    background: #FFFFFF;
+    /* background: #FFFFFF; */
     cursor: pointer;
-
+    background-size: cover;
     min-width: 200px;
 }
 .actualBlock__main__questionBlock p {
@@ -60,6 +60,9 @@ body {
     margin-bottom: 0;
     margin-top: 0;
     color: #3C3C3B;
+}
+.actualBlock__main__questionBlock:hover {
+    box-shadow: 8px 12px 20px rgba(19, 56, 112, 0.22);
 }
 .mt0_sd{
     padding-top: 0px !important;
